welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:15: error: not found: value baisseBrose
baisseBrose();
^